[project]
name = "yunxin-mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.6.0",
    "requests>=2.32.3",
]

[[project.authors]]
name = "caojiajun"
email = "zj_caojiajun@163.com"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/yunxin_mcp"]

[project.scripts]
yunxin_mcp_server = "yunxin_mcp_server:main"

[project.urls]
"Homepage" = "https://github.com/netease-im/yunxin-mcp-server"